[gd_scene load_steps=10 format=3 uid="uid://cjq48saf4fkmk"]

[ext_resource type="Texture2D" uid="uid://dy6uxe20y03uu" path="res://Assets/Bonecos/Cazumb√°.png" id="1_8niev"]
[ext_resource type="Script" path="res://object_1.gd" id="1_n2xsb"]
[ext_resource type="Script" path="res://object_2.gd" id="2_mmwfu"]
[ext_resource type="Script" path="res://object_3.gd" id="3_ant2b"]
[ext_resource type="Texture2D" uid="uid://chgoxsk6yfsu2" path="res://Assets/Bonecos/Boina.png" id="3_jgcsn"]
[ext_resource type="Texture2D" uid="uid://ckniyklqmwik" path="res://Assets/Bonecos/Badalo.png" id="5_gt7ck"]
[ext_resource type="Script" path="res://button.gd" id="7_14rsb"]
[ext_resource type="AudioStream" uid="uid://bqmpwnrvel8dp" path="res://Assets/Sons/wrong_sound.mp3" id="8_bwsjx"]
[ext_resource type="AudioStream" uid="uid://d1lke0rf0uvy7" path="res://Assets/Sons/correct_sound.mp3" id="9_2dpol"]

[node name="Node2D" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Object1" type="TextureButton" parent="."]
offset_left = 115.0
offset_top = 129.0
offset_right = 1303.0
offset_bottom = 1665.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_8niev")
stretch_mode = 0
script = ExtResource("1_n2xsb")

[node name="Object2" type="TextureButton" parent="."]
offset_left = 725.0
offset_top = 185.0
offset_right = 1163.0
offset_bottom = 493.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3_jgcsn")
script = ExtResource("2_mmwfu")
is_correct_object = true

[node name="Object3" type="TextureButton" parent="."]
offset_left = 441.0
offset_top = 200.0
offset_right = 801.0
offset_bottom = 561.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_gt7ck")
script = ExtResource("3_ant2b")

[node name="InfoCard" type="Panel" parent="."]
visible = false
offset_left = 608.0
offset_top = 419.0
offset_right = 1057.0
offset_bottom = 588.0

[node name="Label" type="Label" parent="InfoCard"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Encontrou o certo man"

[node name="Button" type="Button" parent="InfoCard"]
layout_mode = 0
offset_left = 389.0
offset_top = -32.0
offset_right = 449.0
offset_bottom = -1.0
text = "Fechar
"
script = ExtResource("7_14rsb")

[node name="AudioPlayerWrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bwsjx")

[node name="AudioPlayerCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2dpol")

[connection signal="mouse_entered" from="Object1" to="Object1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Object1" to="Object1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Object2" to="Object2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Object2" to="Object2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Object3" to="Object3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Object3" to="Object3" method="_on_mouse_exited"]
[connection signal="pressed" from="InfoCard/Button" to="InfoCard/Button" method="_on_pressed"]
